--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,45 @@
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'maven'
+
+sourceCompatibility = 1.8
+group = 'iox.hla'
+version = '0.0.1'
+
 configure(install.repositories.mavenInstaller) {
     pom.project {
-        groupId 'iox.hla'
-        artifactId 'federate-score'
+        groupId group
+        artifactId 'federate-core'
         inceptionYear '2017'
         packaging 'jar'
     }
 }
 
-sourceCompatibility = 1.8
-version = '0.0.1'
-
 repositories {
     maven {url 'file://' + new File(System.getProperty('user.home'), '.m2/repository').absolutePath;}
     jcenter()
 }
+
+sourceSets {
+    main {
+        java {
+            srcDirs 'src/main/java'
+            srcDirs 'gen/main/java'
+         }
+    }
+    test {
+        java {
+            srcDirs 'src/test/java'
+         }
+    }
+}
  
 dependencies {
+    compile 'iox.emf:fom2emf:0.0.1'
     compile 'org.slf4j:slf4j-api:1.7.14'
     compile 'org.porticoproject:portico:2.1.0'
+    compile 'org.eclipse.emf:org.eclipse.emf.common:2.12.0'
+    compile 'org.eclipse.emf:org.eclipse.emf.ecore:2.12.0'
+    compile 'org.eclipse.emf:org.eclipse.emf.ecore.xmi:2.12.0'
     testCompile 'junit:junit:4.+'
 }
