--- a/.settings/org.eclipse.buildship.core.prefs
+++ b/.settings/org.eclipse.buildship.core.prefs
@@ -1,2 +1,3 @@
-connection.project.dir=../ReceiveEMF
+#Mon Feb 26 16:19:14 EST 2018
 eclipse.preferences.version=1
+connection.project.dir=../emf4blockchain
